HEAD
	+ Avoid warning when stopping a module without FirewallHelper
3.2.1
	+ Include contents of /etc/resolv.conf in bug report
	+ Avoid Apache error screen in login when entering through Zentyal
	  Remote using password
	+ Fix warning comparing undefined string in DomainName type
	+ Rewrite row isEqualTo method using hashElements instead of elements
	+ Only allow to move dashboard widget by its handle
	+ Service type setter works again
3.2
	+ Set 3.2 versions and non-beta logo
3.1.13
	+ Added missing EBox::Gettext uses, fixes crash in view logs refresh
	+ Minor CSS style fixes
	+ Added missing use statement in EBox::Types::MultiStateAction
3.1.12
	+ Do not crash if /etc/timezone does not exist
	+ Clean /var/lib/zentyal/tmp at the first moments of boot instead of
	  when running zentyal start, this fixes problems with leftover locks
	  that affect dhclient hooks
	+ Fixed wrong case in some class names for the save changes button
	+ Fixed autoscroll in dashboard widgets
	+ Added placeholder for drag & drop of table rows
	+ No autoscroll is done when overflow happens. This makes sortable
	  work in chromium
	+ Set audit after logs when enabling in first install
	+ Avoid getting unsaved changes by using readonly instance in manage-logs
3.1.11
	+ Initial setup for webadmin is now executed in postinst
	+ Fixed webadmin port migration
3.1.10
	+ Use DATETIME type in date column for consolidation tables
	+ Summarised reports shows graphs again
	+ Events summarised report has breadcrumbs now
	+ Base EBox::Logs::Composite::SummarizedReport to let summarised
	  reports have common breadcrumbs
	+ Added migration from 3.0 (apache -> webadmin)
3.1.9
	+ Fixed in-place boolean edit with non-basic types different to Union
	+ Removed some warnings in error.log
	+ Fixed confirmation dialogs warning style
	+ Fixed configure widgets width and drop behavior
	+ Fixed regression in dashboard register link after jQuery migration