@@ -1,5 +1,5 @@
 HEAD
-	+ Added cache for object members
+	+ Only unroll member ip range addresses in the addresses() method
 3.2
 	+ Set version to 3.2
 3.1.1
